增加枫叶相册链接

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseurl = "http://support.senboll.com:8888/help"
 # baseurl = "https://jameszhangchina.github.io/"
-languageCode = "en-US"
+languageCode = "zh-CN"
+# languageCode = "en-US"
 defaultContentLanguage = "en"
 
 title = "枫叶在线帮助"
@@ -16,6 +17,8 @@ enableGitInfo = true
   description = ""
   author = "James"
   showVisitedLinks = true
+  ## Gh repo (include trailing slash)
+  ghrepo = "https://github.com/JamesZhangChina/support.senboll.com.help/"
 
 [[Languages.en.menu.shortcuts]] 
 name = "系统拓扑图"
