--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "zh-CN"
 # languageCode = "en-US"
 defaultContentLanguage = "en"
 
-title = "枫叶在线帮助"
+title = "枫叶在线帮助中心"
 theme = "hugo-theme-learn"
 themesdir = "themes/"
 metaDataFormat = "yaml"
