--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -4,26 +4,28 @@
 [[docs]]
   name = "理论基础"
   weight = 1
-  identifier = "理论基础"
+  identifier = "basic-knowledge"
+  post = "break"
   url = "/node1/"
 
 [[docs]]
   name = "安装和维护"
   weight = 5
-  identifier = "安装和维护"
+  identifier = "maintenance"
+  post = "break"
   url = "/node2/"
 
 [[docs]]
   name = "常见问题"
   weight = 15
-  identifier = "常见问题"
+  identifier = "questions"
   post = "break"
   url = "/node3/"
 
 [[docs]]
   name = "其他"
   weight = 20
-  identifier = "其他"
+  identifier = "others"
   post = "break"
   url = "/node9/"
 
@@ -35,7 +37,8 @@
 [[global]]
   name = "系统框架"
   weight = 1
-  identifier = "系统框架"
+  identifier = "paradox-frame"
+  post = "external"
   url = "/paradox-frame/"
 
 [[global]]
@@ -49,7 +52,7 @@
   name = "资料服务器"
   weight = 150
   icon = true
-  identifier = "community"
+  identifier = "file-server"
   post = "external"
   url = "http://support.senboll.com:8888"
 
