--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,7 +6,7 @@ release = "0.52"
 removefromexternalsearch = false
 isDisableSearch = false
 ## Gh repo for site footer (include trailing slash)
-ghrepo = "https://github.com/gohugoio/hugoDocs/"
+ghrepo = "https://github.com/JamesZhangChina/support.senboll.com.help/"
 ## GH Repo for filing a new issue
 github_repo = "https://github.com/gohugoio/hugo/issues/new"
 ### Edit content repo (set to automatically enter "edit" mode; this is good for "improve this page" links)
