--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -19,7 +19,7 @@ forum = "https://discourse.gohugo.io/"
 gtmid = ""
 
 # First one is picked as the Twitter card image if not set on page.
-images = ["images/gohugoio-card.png"]
+images = ["images/logo-senboll.png"]
 
 flex_box_interior_classes = "flex-auto w-100 w-40-l mr3 mb3 bg-white ba b--moon-gray nested-copy-line-height"
 
