--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -24,3 +24,5 @@ images = ["images/logo-senboll.png"]
 flex_box_interior_classes = "flex-auto w-100 w-40-l mr3 mb3 bg-white ba b--moon-gray nested-copy-line-height"
 
 #sidebar_direction = "sidebar_left"
+
+logoicon = "images/logo-senboll.png"
