--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,7 +7,7 @@ enableEmoji = true
 footnotereturnlinkcontents = "↩"
 languageCode = "en-us"
 metaDataFormat = "yaml"
-title = "盛波尔科技"
+title = "报警器_防盗报警_枫叶报警_智能报警_加拿大枫叶_盛波尔科技"
 theme = "gohugoioTheme"
 
 googleAnalytics = "UA-7131036-4"
