--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ baseurl = "http://support.senboll.com:8888/help"
 languageCode = "zh-CN"
 defaultContentLanguage = "en"
 
-title = "枫叶帮助中心"
+title = "枫叶文档中心"
 theme = "gohugoioTheme"
 themesdir = "themes/"
 metaDataFormat = "yaml"
