--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://support.senboll.com:8888/help"
-# baseurl = "https://jameszhangchina.github.io/"
+# baseurl = "https://jameszhang023.github.io/"
 languageCode = "zh-CN"
 defaultContentLanguage = "en"
 
