--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,7 @@ metaDataFormat = "yaml"
 title = "报警器_防盗报警_枫叶报警_智能报警_加拿大枫叶_盛波尔科技"
 theme = "gohugoioTheme"
 
-# googleAnalytics = "UA-7131036-4"
+googleAnalytics = "UA-7131036-4"
 
 pluralizeListTitles = false
 
