--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # baseURL = "https://gohugo.io/"
-baseurl = "http://support.senboll.com/help"
+baseurl = "https://support.senboll.com/help"
 paginate = 100
 defaultContentLanguage = "zh"
 enableEmoji = true
