--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://support.senboll.com/help"
+baseurl = "http://support.senboll.com:8888/help"
 # baseurl = "https://jameszhang023.github.io/"
 languageCode = "zh-CN"
 defaultContentLanguage = "en"
