--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -68,11 +68,11 @@
   icon = true
   identifier = "file-server"
   post = "external"
-  url = "https://support.senboll.com"
+  url = "http://support.senboll.com:8888"
 
 [[global]]
   name = "案例相册"
   weight = 200
   identifier = "usage"
   post = "external"
-  url = "https://support.senboll.com/usage"
+  url = "http://support.senboll.com:8888/usage"
