--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -16,9 +16,9 @@
   url = "/node2/"
 
 [[docs]]
-  name = "用户使用说明书"
+  name = "用户指南"
   weight = 10
-  identifier = "用户使用说明书"
+  identifier = "用户指南"
   post = "break"
   url = "/node3/"
 
