--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -48,12 +48,12 @@
 # LOW LEVEL ITEMS
 
 
-[[global]]
-  name = "首页"
-  weight = 1
-  identifier = "home"
-  post = "break"
-  url = "https://www.senboll.com"
+# [[global]]
+#   name = "首页"
+#   weight = 1
+#   identifier = "home"
+#   post = "break"
+#   url = "https://www.senboll.com"
 
 # [[global]]
 #   name = "关于"
@@ -63,8 +63,8 @@
 #   url = "https://www.senboll.com/zh-hans/about"
 
 [[global]]
-  name = "关于"
-  weight = 2
+  name = "首页"
+  weight = 1
   identifier = "docs"
   url = "/documentation/"
 
@@ -83,3 +83,11 @@
   identifier = "usage"
   post = "external"
   url = "http://support.senboll.com:8888/usage"
+
+[[global]]
+  name = "枫叶APP缴费"
+  weight = 250
+  identifier = "swan-pay"
+  post = "external"
+  url = "http://support.senboll.com:8888/swan"
+
