--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -2,9 +2,9 @@
 # Chinese menus
 
 [[docs]]
-  name = "理论基础"
+  name = "基础知识"
   weight = 1
-  identifier = "理论基础"
+  identifier = "基础知识"
   post = "break"
   url = "/node1/"
 
