--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -66,7 +66,7 @@
   name = "主页"
   weight = 1
   identifier = "docs"
-  url = "/documentation/"
+  url = "/"
 
 # Anything with a weight > 100 gets an external icon
 [[global]]
