--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -75,7 +75,7 @@
   icon = true
   identifier = "file-server"
   post = "external"
-  url = "http://support.senboll.com:8888"
+  url = "http://support.senboll.com:8888/files"
 
 [[global]]
   name = "案例相册"
