--- a/config/_default/menus/menus.zh.toml
+++ b/config/_default/menus/menus.zh.toml
@@ -82,7 +82,7 @@
   weight = 200
   identifier = "usage"
   post = "external"
-  url = "http://support.senboll.com:8888/usage"
+  url = "http://support.senboll.com:8888/photos"
 
 [[global]]
   name = "枫叶APP缴费"
